--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
+<div>Hey Farheen</div>
 
+<app-container>
+  <app-books></app-books>
+  <app-employee></app-employee>
+  <h1>This is from container</h1>
+</app-container>
 
-<div>
-  Hey Farheen
-</div>
-<app-books></app-books>
 <router-outlet></router-outlet>
