--- a/src/app/room/books.component.html
+++ b/src/app/room/books.component.html
@@ -1,7 +1,10 @@
-<p>books works!</p>
 
 
-<h1>{{hotelName}}</h1>
+
+<!-- <h1>{{hotelName}}</h1> -->
+ 
+<app-header></app-header>
+
 <p>Numbers of Rooms:</p>
 <div *ngIf="hideRooms" [innerText] = "numberOfRoom">
 </div>
